--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 	<version>1.0-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-		</dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.9.10</version>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
